# docs/swagger.json
@@ -503,9 +503,53 @@
                 }
             }
         },
+        "/protected/change-email": {
+            "post": {
+                "description": "requires current password and new email",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "change-email"
+                ],
+                "summary": "POST request to update email",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "user email for update",
+                        "name": "change-email",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/reqmodels.EmailChangeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/respmodels.StringResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/respmodels.FailedResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/protected/change-password": {
             "post": {
-                "description": "requires registred email address, current password and new password",
+                "description": "requires current password and new password",
                 "produces": [
                     "application/json"
                 ],
@@ -801,7 +845,9 @@
                     "type": "integer"
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 2
                 }
             }
         },
@@ -810,6 +856,17 @@
             "properties": {
                 "id": {
                     "type": "integer"
+                }
+            }
+        },
+        "reqmodels.EmailChangeRequest": {
+            "type": "object",
+            "properties": {
+                "currentPassword": {
+                    "type": "string"
+                },
+                "newEmail": {
+                    "type": "string"
                 }
             }
         },
@@ -858,7 +915,9 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 2
                 },
                 "password": {
                     "type": "string"
@@ -905,7 +964,8 @@
                     "type": "integer"
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 50
                 }
             }
         },
@@ -916,7 +976,9 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 2
                 }
             }
         },
