# pkg/routers/routers.go
@@ -29,6 +29,7 @@ func SetupRouter(conf *config.Config, server *gin.Engine, a *controllers.AppCont
 	protected.GET("/userinfo", a.UserInfo)
 	protected.PATCH("/create-password", a.PasswordCreate)
 	protected.POST("/change-password", a.PasswordChange)
+	protected.POST("/change-email", a.EmailChange)
 
 	// categories block
 	server.GET("open/allcategories", a.CatGetAll)
